# trend-lab-proofsnap-cli-260521

./: README.md  pyproject.toml
src/proofsnap_cli/: main.py
tests/: test_smoke.py
